[gd_scene load_steps=13 format=2]

[ext_resource path="res://game/World.gd" type="Script" id=1]
[ext_resource path="res://game/player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/PlayerLives.tscn" type="PackedScene" id=3]
[ext_resource path="res://game/Game.gd" type="Script" id=4]
[ext_resource path="res://ui/GameOver.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/fonts/Infinite.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://ui/GUI.gd" type="Script" id=7]
[ext_resource path="res://assets/music/Untitled2-looping.mp3" type="AudioStream" id=8]
[ext_resource path="res://game/UfoManager.tscn" type="PackedScene" id=10]

[sub_resource type="Environment" id=1]
background_mode = 4
glow_enabled = true
glow_blend_mode = 0
glow_hdr_threshold = 0.87
glow_hdr_luminance_cap = 1.0
glow_bicubic_upscale = true
glow_high_quality = true
adjustment_brightness = 0.52

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1408, 0, 0, 0, 0, 0, 1416, 792, 0, 0, 0, 0, 0, 784, 0, 0, 0, 0, 0, 0 )
}

[sub_resource type="DynamicFont" id=3]
size = 19
font_data = ExtResource( 6 )

[node name="Game" type="Node"]
script = ExtResource( 4 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="World" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="AsteroidSpawnPath" type="Path2D" parent="World"]
curve = SubResource( 2 )

[node name="AsteroidSpawnPosition" type="PathFollow2D" parent="World/AsteroidSpawnPath"]

[node name="Player" parent="World" instance=ExtResource( 2 )]

[node name="LevelStartTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="GUI" type="Control" parent="."]
margin_right = 1424.0
margin_bottom = 800.0
script = ExtResource( 7 )

[node name="GameOver" parent="GUI" instance=ExtResource( 5 )]
visible = false

[node name="Score" type="Label" parent="GUI"]
margin_left = 30.0
margin_top = 30.0
margin_right = 58.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 3 )
text = "12345"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerLives" parent="GUI" instance=ExtResource( 3 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -161.0
margin_top = 30.0
margin_right = -30.0
margin_bottom = 64.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -17.661
autoplay = true
bus = "MusicMaster"

[node name="UfoManager" parent="." instance=ExtResource( 10 )]

[connection signal="start_level" from="." to="UfoManager" method="_on_Game_start_level"]
[connection signal="world_clear" from="World" to="." method="_on_level_clear"]
[connection signal="lives_updated" from="World/Player" to="GUI/PlayerLives" method="update_lives"]
[connection signal="player_gameover" from="World/Player" to="." method="_on_Player_player_gameover"]
[connection signal="timeout" from="LevelStartTimer" to="." method="_on_LevelStart"]
[connection signal="quit_game" from="GUI/GameOver" to="." method="_on_GameOver_quit_game"]
[connection signal="restart_game" from="GUI/GameOver" to="." method="reset"]
